--- a/package.json
+++ b/package.json
@@ -18,16 +18,16 @@
 		"start": "NODE_ENV=production node ./server.js"
 	},
 	"dependencies": {
-		"@mcansh/http-helmet": "^0.8.1",
-		"@remix-run/express": "^2.1.0",
-		"@remix-run/node": "0.0.0-nightly-49ddabc-20231025",
-		"@remix-run/react": "0.0.0-nightly-49ddabc-20231025",
-		"@remix-run/serve": "^2.1.0",
+		"@mcansh/http-helmet": "^0.9.0",
+		"@remix-run/express": "^2.2.0",
+		"@remix-run/node": "2.2.0",
+		"@remix-run/react": "2.2.0",
+		"@remix-run/serve": "^2.2.0",
 		"cloudinary-build-url": "^0.2.4",
 		"clsx": "^2.0.0",
 		"cross-env": "^7.0.3",
 		"express": "^4.18.2",
-		"fathom-client": "^3.5.0",
+		"fathom-client": "^3.6.0",
 		"is-ci": "^3.0.1",
 		"isbot": "^3.7.0",
 		"pretty-cache-header": "^1.0.0",
@@ -38,28 +38,28 @@
 	},
 	"devDependencies": {
 		"@cld-apis/types": "^0.1.6",
-		"@remix-run/dev": "0.0.0-nightly-49ddabc-20231025",
-		"@remix-run/eslint-config": "0.0.0-nightly-49ddabc-20231025",
-		"@types/react": "^18.2.29",
+		"@remix-run/dev": "2.2.0",
+		"@remix-run/eslint-config": "2.2.0",
+		"@types/react": "^18.2.33",
 		"@types/react-dom": "^18.2.14",
-		"@typescript/lib-dom": "npm:@types/web@^0.0.117",
+		"@typescript/lib-dom": "npm:@types/web@^0.0.119",
 		"autoprefixer": "^10.4.16",
 		"del": "^7.1.0",
-		"eslint": "^8.51.0",
+		"eslint": "^8.52.0",
 		"eslint-plugin-prefer-let": "^3.0.1",
 		"fs-extra": "^11.1.1",
 		"gitignore-fs": "^2.2.2",
 		"glob": "^10.3.10",
 		"husky": "^8.0.3",
 		"kleur": "^4.1.5",
-		"lint-staged": "^15.0.1",
+		"lint-staged": "^15.0.2",
 		"npm-run-all": "^4.1.5",
 		"postcss": "^8.4.31",
 		"postcss-100vh-fix": "^1.0.2",
 		"prettier": "^3.0.3",
 		"prettier-plugin-tailwindcss": "^0.5.6",
 		"svgstore": "^3.0.1",
-		"tailwindcss": "^3.3.3",
+		"tailwindcss": "^3.3.5",
 		"tailwindcss-padding-safe": "^1.0.6",
 		"typescript": "5.2.2",
 		"vite": "^4.5.0",
