--- a/package.json
+++ b/package.json
@@ -41,13 +41,15 @@
 	"devDependencies": {
 		"@cld-apis/types": "^0.1.6",
 		"@remix-run/dev": "2.2.0",
-		"@remix-run/eslint-config": "2.2.0",
 		"@types/react": "^18.2.36",
 		"@types/react-dom": "^18.2.14",
+		"@typescript-eslint/eslint-plugin": "^6.10.0",
+		"@typescript-eslint/parser": "^6.10.0",
 		"@typescript/lib-dom": "npm:@types/web@^0.0.119",
 		"autoprefixer": "^10.4.16",
 		"del": "^7.1.0",
 		"eslint": "^8.53.0",
+		"eslint-plugin-import": "^2.29.0",
 		"eslint-plugin-prefer-let": "^3.0.1",
 		"fs-extra": "^11.1.1",
 		"gitignore-fs": "^2.2.2",
