--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
 		"clean": "./scripts/clean.js",
 		"type-check": "tsc",
 		"lint": "eslint --ignore-path .gitignore --cache --fix .",
-		"format": "prettier --ignore-path .gitignore --ignore-unknown --write .",
+		"format": "prettier --ignore-path .gitignore --cache --cache-location .prettiercache --ignore-unknown --write .",
 		"validate": "run-p lint format type-check",
 		"prepare": "is-ci || husky install",
 		"dev": "node ./server.js",
@@ -41,8 +41,8 @@
 	"devDependencies": {
 		"@cld-apis/types": "^0.1.6",
 		"@remix-run/dev": "2.2.0",
-		"@types/react": "^18.2.36",
-		"@types/react-dom": "^18.2.14",
+		"@types/react": "^18.2.37",
+		"@types/react-dom": "^18.2.15",
 		"@typescript-eslint/eslint-plugin": "^6.10.0",
 		"@typescript-eslint/parser": "^6.10.0",
 		"@typescript/lib-dom": "npm:@types/web@^0.0.119",
@@ -56,12 +56,12 @@
 		"glob": "^10.3.10",
 		"husky": "^8.0.3",
 		"kleur": "^4.1.5",
-		"lint-staged": "^15.0.2",
+		"lint-staged": "^15.1.0",
 		"npm-run-all": "^4.1.5",
 		"postcss": "^8.4.31",
 		"postcss-100vh-fix": "^1.0.2",
-		"prettier": "^3.0.3",
-		"prettier-plugin-tailwindcss": "^0.5.6",
+		"prettier": "^3.1.0",
+		"prettier-plugin-tailwindcss": "^0.5.7",
 		"svgstore": "^3.0.1",
 		"tailwindcss": "^3.3.5",
 		"tailwindcss-padding-safe": "^1.0.6",
