--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
 		"husky": "^8.0.3",
 		"kleur": "^4.1.5",
 		"lint-staged": "^15.2.0",
+		"million": "^2.6.4",
 		"npm-run-all": "^4.1.5",
 		"patch-package": "^8.0.0",
 		"postcss": "^8.4.32",
