--- a/package.json
+++ b/package.json
@@ -21,17 +21,17 @@
 		"@fastify/middie": "^8.3.0",
 		"@fastify/static": "^6.12.0",
 		"@mcansh/http-helmet": "^0.9.0",
-		"@mcansh/remix-fastify": "^3.0.2",
-		"@remix-run/node": "2.2.0",
-		"@remix-run/react": "2.2.0",
-		"@remix-run/serve": "^2.2.0",
+		"@mcansh/remix-fastify": "pre",
+		"@remix-run/node": "2.3.0",
+		"@remix-run/react": "2.3.0",
+		"@remix-run/serve": "^2.3.0",
 		"cloudinary-build-url": "^0.2.4",
 		"clsx": "^2.0.0",
 		"cross-env": "^7.0.3",
 		"fastify": "^4.24.3",
 		"fathom-client": "^3.6.0",
 		"is-ci": "^3.0.1",
-		"isbot": "^3.7.0",
+		"isbot": "^3.7.1",
 		"pretty-cache-header": "^1.0.0",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
@@ -40,11 +40,11 @@
 	},
 	"devDependencies": {
 		"@cld-apis/types": "^0.1.6",
-		"@remix-run/dev": "2.2.0",
+		"@remix-run/dev": "2.3.0",
 		"@types/react": "^18.2.37",
 		"@types/react-dom": "^18.2.15",
-		"@typescript-eslint/eslint-plugin": "^6.10.0",
-		"@typescript-eslint/parser": "^6.10.0",
+		"@typescript-eslint/eslint-plugin": "^6.11.0",
+		"@typescript-eslint/parser": "^6.11.0",
 		"@typescript/lib-dom": "npm:@types/web@^0.0.119",
 		"autoprefixer": "^10.4.16",
 		"del": "^7.1.0",
@@ -66,7 +66,7 @@
 		"tailwindcss": "^3.3.5",
 		"tailwindcss-padding-safe": "^1.0.6",
 		"typescript": "5.2.2",
-		"vite": "^4.5.0",
+		"vite": "^5.0.0",
 		"vite-tsconfig-paths": "^4.2.1"
 	},
 	"lint-staged": {
