--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
 		"@fastify/middie": "^8.3.0",
 		"@fastify/static": "^6.12.0",
 		"@mcansh/http-helmet": "^0.9.0",
-		"@mcansh/remix-fastify": "pre",
+		"@mcansh/remix-fastify": "3.2.0-pre.0",
 		"@remix-run/node": "2.3.0",
 		"@remix-run/react": "2.3.0",
 		"@remix-run/serve": "^2.3.0",
