--- a/package.json
+++ b/package.json
@@ -70,6 +70,9 @@
 		"vite": "^5.0.0",
 		"vite-tsconfig-paths": "^4.2.1"
 	},
+	"overrides": {
+		"vite": "^5.0.0"
+	},
 	"lint-staged": {
 		"*.+(js|jsx|ts|tsx|cts|mts)": [
 			"eslint --cache --fix"
