--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
 		"autoprefixer": "^10.4.16",
 		"del": "^7.1.0",
 		"eslint": "^8.53.0",
+		"eslint-import-resolver-typescript": "^3.6.1",
 		"eslint-plugin-import": "^2.29.0",
 		"eslint-plugin-prefer-let": "^3.0.1",
 		"fs-extra": "^11.1.1",
