--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
 		"fathom-client": "^3.6.0",
 		"is-ci": "^3.0.1",
 		"isbot": "^3.7.1",
+		"million": "^2.6.4",
 		"pretty-cache-header": "^1.0.0",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
