--- a/.github/workflows/remix-nightly.yml
+++ b/.github/workflows/remix-nightly.yml
@@ -25,7 +25,7 @@ jobs:
       - name: ⬇️ Checkout repo
         uses: actions/checkout@v4
 
-      - name: 🧅 setup bun
+      - name: 🧅 Setup Bun
         uses: oven-sh/setup-bun@v1
 
       - name: ⎔ Setup node
@@ -40,11 +40,16 @@ jobs:
         id: bump
         run: |
           VERSION=$(npm info @remix-run/react --json | jq '."dist-tags".nightly')
-          echo "::set-output name=version::$VERSION"
           npx --yes upgrade-remix@latest $VERSION
+          if [[ -z $(git status -s) ]]; then
+            echo "version=$VERSION" >> $GITHUB_OUTPUT
+          fi
 
       - name: 📤 Push changes
         uses: gr2m/create-or-update-pull-request-action@v1
+        if: steps.bump.outputs.version != ''
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           title: "chore(deps): bump remix to ${{ steps.bump.outputs.version }}"
           commit-message: "chore(deps): bump remix to ${{ steps.bump.outputs.version }}"
