--- a/package.json
+++ b/package.json
@@ -7,13 +7,15 @@
 	"sideEffects": false,
 	"type": "module",
 	"scripts": {
-		"build": "node ./scripts/svg.js && npm run type-check && vite build && vite build --ssr",
+		"build:icons": "node ./scripts/svg.js",
+		"build": "npm run build:icons && npm run type-check && vite build && vite build --ssr",
 		"clean": "./scripts/clean.js",
 		"type-check": "tsc",
 		"lint": "eslint --ignore-path .gitignore --cache --fix .",
 		"format": "prettier --ignore-path .gitignore --cache --cache-location .prettiercache --ignore-unknown --write .",
 		"validate": "run-p lint format type-check",
 		"prepare": "node ./scripts/prepare.js",
+		"predev": "npm run build:icons",
 		"dev": "NODE_ENV=development node --watch-path ./server.js ./server.js",
 		"start": "NODE_ENV=production node ./server.js"
 	},
@@ -41,14 +43,14 @@
 	"devDependencies": {
 		"@cld-apis/types": "^0.1.6",
 		"@remix-run/dev": "0.0.0-nightly-8c42697-20231122",
-		"@types/react": "^18.2.37",
-		"@types/react-dom": "^18.2.15",
-		"@typescript-eslint/eslint-plugin": "^6.11.0",
-		"@typescript-eslint/parser": "^6.11.0",
+		"@types/react": "^18.2.38",
+		"@types/react-dom": "^18.2.17",
+		"@typescript-eslint/eslint-plugin": "^6.12.0",
+		"@typescript-eslint/parser": "^6.12.0",
 		"@typescript/lib-dom": "npm:@types/web@^0.0.119",
 		"autoprefixer": "^10.4.16",
 		"del": "^7.1.0",
-		"eslint": "^8.53.0",
+		"eslint": "^8.54.0",
 		"eslint-import-resolver-typescript": "^3.6.1",
 		"eslint-plugin-import": "^2.29.0",
 		"eslint-plugin-prefer-let": "^3.0.1",
@@ -67,8 +69,8 @@
 		"svgstore": "^3.0.1",
 		"tailwindcss": "^3.3.5",
 		"tailwindcss-padding-safe": "^1.0.6",
-		"typescript": "5.2.2",
-		"vite": "^5.0.0",
+		"typescript": "5.3.2",
+		"vite": "^5.0.2",
 		"vite-tsconfig-paths": "^4.2.1"
 	},
 	"lint-staged": {
@@ -83,6 +85,6 @@
 		"node": ">=18 && <21"
 	},
 	"overrides": {
-		"vite": "^5.0.0"
+		"vite": "^5.0.2"
 	}
 }
