--- a/.github/workflows/remix-nightly.yml
+++ b/.github/workflows/remix-nightly.yml
@@ -39,21 +39,27 @@ jobs:
       - name: 📦 Bump Remix to latest nightly
         id: bump
         run: |
+          PREV_VERSION=$(npm ls --depth=0 @remix-run/react --json | jq -r '.dependencies["@remix-run/react"].version')
           VERSION=$(npm info @remix-run/react dist-tags.nightly)
           npx --yes upgrade-remix@latest $VERSION
           npm run format
           if [ "$(git status --porcelain)" ]; then
             echo "version=$VERSION" >> $GITHUB_OUTPUT
+            echo "prev_version=$PREV_VERSION" >> $GITHUB_OUTPUT
           fi
 
       - name: 📤 Push changes
         uses: gr2m/create-or-update-pull-request-action@v1
-        if: steps.bump.outputs.version != ''
+        if: steps.bump.outputs.version != '' && steps.bump.outputs.prev_version != ''
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          title: "chore(deps): bump remix to ${{ steps.bump.outputs.version }}"
-          commit-message: "chore(deps): bump remix to ${{ steps.bump.outputs.version }}"
+          title: "chore(deps): bump `@remix-run/*` to ${{ steps.bump.outputs.version }}"
+          commit-message: "chore(deps): bump `@remix-run/*` to ${{ steps.bump.outputs.version }}"
           update-pull-request-title-and-body: true
           branch: actions/remix-nightly
           author: "github-actions[bot] <github-actions[bot]@users.noreply.github.com>"
+          body: |
+            This PR bumps \`@remix-run/*\` to the latest nightly release. For a list of changes, see the list of [changes][changes].
+
+            [changes]: https://github.com/remix-run/remix/compare/v${{ steps.bump.outputs.prev_version }}...v${{ steps.bump.outputs.version }}
