--- a/.github/workflows/remix-nightly.yml
+++ b/.github/workflows/remix-nightly.yml
@@ -25,16 +25,18 @@ jobs:
       - name: ⬇️ Checkout repo
         uses: actions/checkout@v4
 
-      - name: 🧅 Setup Bun
-        uses: oven-sh/setup-bun@v1
-
       - name: ⎔ Setup node
         uses: actions/setup-node@v4
         with:
           node-version: 20
 
       - name: 📥 Install dependencies
-        run: bun install
+        uses: pnpm/action-setup@v2
+        with:
+          version: 8
+          run_install: |
+            - recursive: true
+              args: [--frozen-lockfile, --strict-peer-dependencies]
 
       - name: 📦 Bump Remix to latest nightly
         id: bump
