--- a/package.json
+++ b/package.json
@@ -63,6 +63,8 @@
     "eslint-plugin-import": "^2.32.0",
     "eslint-plugin-prefer-let": "^4.0.0",
     "eslint-plugin-react-hooks": "6.1.0",
+    "eslint-plugin-react-compiler": "19.0.0-beta-e993439-20250328",
+    "fontaine": "^0.6.0",
     "husky": "^9.1.7",
     "knip": "^5.64.1",
     "lightningcss": "^1.30.2",
@@ -83,5 +85,5 @@
   "engines": {
     "node": ">=22"
   },
-  "packageManager": "pnpm@10.17.1+sha512.17c560fca4867ae9473a3899ad84a88334914f379be46d455cbf92e5cf4b39d34985d452d2583baf19967fa76cb5c17bc9e245529d0b98745721aa7200ecaf7a"
+  "packageManager": "pnpm@10.20.0+sha512.cf9998222162dd85864d0a8102e7892e7ba4ceadebbf5a31f9c2fce48dfce317a9c53b9f6464d1ef9042cba2e02ae02a9f7c143a2b438cd93c91840f0192b9dd"
 }
