--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "react-router-dom": "7.5.3",
     "react-scan": "^0.3.3",
     "remix-utils": "^8.5.0",
+    "shippie": "^0.10.0",
     "tailwind-merge": "^3.2.0",
     "zod": "^3.24.4"
   },
