--- a/package.json
+++ b/package.json
@@ -25,64 +25,64 @@
   },
   "dependencies": {
     "@mcansh/http-helmet": "^0.13.0",
-    "@mcansh/remix-fastify": "https://pkg.pr.new/@mcansh/remix-fastify@502",
-    "@react-router/node": "7.5.0",
+    "@mcansh/remix-fastify": "^4.0.8",
+    "@react-router/node": "7.5.3",
     "address": "^2.0.3",
     "cloudinary-build-url": "^0.2.4",
     "clsx": "^2.1.1",
     "cross-env": "^7.0.3",
     "etag": "^1.8.1",
-    "fastify": "^5.2.2",
+    "fastify": "^5.3.2",
     "fathom-client": "^3.7.2",
     "get-port": "^7.1.0",
-    "isbot": "^5.1.25",
+    "isbot": "^5.1.27",
     "pretty-cache-header": "^1.0.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
-    "react-router": "7.5.0",
-    "react-router-dom": "7.5.0",
+    "react-router": "7.5.3",
+    "react-router-dom": "7.5.3",
     "react-scan": "^0.3.3",
     "remix-utils": "^8.5.0",
-    "tailwind-merge": "^3.1.0",
-    "zod": "^3.24.2"
+    "tailwind-merge": "^3.2.0",
+    "zod": "^3.24.4"
   },
   "devDependencies": {
     "@cld-apis/types": "^0.1.6",
-    "@eslint/compat": "^1.2.8",
-    "@eslint/js": "^9.24.0",
+    "@eslint/compat": "^1.2.9",
+    "@eslint/js": "^9.26.0",
     "@mcansh/vite-plugin-svg-sprite": "https://pkg.pr.new/mcansh/vite-plugin-svg-sprite/@mcansh/vite-plugin-svg-sprite@e546440",
-    "@react-router/dev": "7.5.0",
-    "@tailwindcss/vite": "4.1.3",
+    "@react-router/dev": "7.5.3",
+    "@tailwindcss/vite": "4.1.5",
     "@total-typescript/tsconfig": "^1.0.4",
     "@types/etag": "^1.8.3",
-    "@types/react": "19.1.0",
-    "@types/react-dom": "19.1.1",
-    "@typescript-eslint/eslint-plugin": "^8.29.0",
-    "@typescript-eslint/parser": "^8.29.0",
+    "@types/react": "19.1.2",
+    "@types/react-dom": "19.1.3",
+    "@typescript-eslint/eslint-plugin": "^8.32.0",
+    "@typescript-eslint/parser": "^8.32.0",
     "@typescript/lib-dom": "npm:@types/web@^0.0.209",
     "autoprefixer": "^10.4.21",
-    "babel-plugin-react-compiler": "19.0.0-beta-e993439-20250328",
-    "eslint": "^9.24.0",
+    "babel-plugin-react-compiler": "19.1.0-rc.1",
+    "eslint": "^9.26.0",
     "eslint-config-flat-gitignore": "^2.1.0",
-    "eslint-import-resolver-typescript": "^4.3.1",
+    "eslint-import-resolver-typescript": "^4.3.4",
     "eslint-plugin-import": "^2.31.0",
     "eslint-plugin-prefer-let": "^4.0.0",
-    "eslint-plugin-react-compiler": "19.0.0-beta-e993439-20250328",
+    "eslint-plugin-react-hooks": "6.0.0-rc.1",
     "husky": "^9.1.7",
-    "knip": "^5.47.0",
+    "knip": "^5.53.0",
     "lightningcss": "^1.29.3",
-    "lint-staged": "^15.5.0",
+    "lint-staged": "^15.5.1",
     "micromatch": "^4.0.8",
     "prettier": "^3.5.3",
     "prettier-plugin-organize-imports": "^4.1.0",
     "prettier-plugin-tailwindcss": "^0.6.11",
-    "react-compiler-runtime": "19.0.0-beta-e993439-20250328",
-    "tailwindcss": "4.1.3",
+    "react-compiler-runtime": "19.1.0-rc.1",
+    "tailwindcss": "4.1.5",
     "typescript": "^5.8.3",
-    "typescript-eslint": "^8.29.0",
-    "vite": "^6.2.5",
-    "vite-plugin-babel": "^1.3.0",
-    "zx": "^8.4.1"
+    "typescript-eslint": "^8.32.0",
+    "vite": "^6.3.5",
+    "vite-plugin-babel": "^1.3.1",
+    "zx": "^8.5.3"
   },
   "engines": {
     "node": ">=22"
