--- a/package.json
+++ b/package.json
@@ -78,6 +78,7 @@
     "prettier-plugin-organize-imports": "^4.1.0",
     "prettier-plugin-tailwindcss": "^0.6.11",
     "react-compiler-runtime": "19.1.0-rc.1",
+    "shippie": "^0.10.0",
     "tailwindcss": "4.1.5",
     "typescript": "^5.8.3",
     "typescript-eslint": "^8.32.0",
