--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "react-router-dom": "7.5.3",
     "react-scan": "^0.3.3",
     "remix-utils": "^8.5.0",
+    "shippie": "^0.10.0",
     "tailwind-merge": "^3.2.0",
     "zod": "^3.24.4"
   },
@@ -77,6 +78,7 @@
     "prettier-plugin-organize-imports": "^4.1.0",
     "prettier-plugin-tailwindcss": "^0.6.11",
     "react-compiler-runtime": "19.1.0-rc.1",
+    "shippie": "^0.10.0",
     "tailwindcss": "4.1.5",
     "typescript": "^5.8.3",
     "typescript-eslint": "^8.32.0",
