--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
   "dependencies": {
     "@mcansh/http-helmet": "^0.13.0",
     "@mcansh/remix-fastify": "^4.0.8",
-    "@react-router/node": "7.5.3",
+    "@react-router/node": "7.6.0",
     "address": "^2.0.3",
     "cloudinary-build-url": "^0.2.4",
     "clsx": "^2.1.1",
@@ -35,16 +35,16 @@
     "fastify": "^5.3.2",
     "fathom-client": "^3.7.2",
     "get-port": "^7.1.0",
-    "isbot": "^5.1.27",
+    "isbot": "^5.1.28",
     "pretty-cache-header": "^1.0.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
-    "react-router": "7.5.3",
-    "react-router-dom": "7.5.3",
+    "react-router": "7.6.0",
+    "react-router-dom": "7.6.0",
     "react-scan": "^0.3.3",
-    "remix-utils": "^8.5.0",
-    "shippie": "^0.10.0",
-    "tailwind-merge": "^3.2.0",
+    "remix-utils": "^8.7.0",
+    "shippie": "^0.14.0",
+    "tailwind-merge": "^3.3.0",
     "zod": "^3.24.4"
   },
   "devDependencies": {
@@ -52,15 +52,15 @@
     "@eslint/compat": "^1.2.9",
     "@eslint/js": "^9.26.0",
     "@mcansh/vite-plugin-svg-sprite": "https://pkg.pr.new/mcansh/vite-plugin-svg-sprite/@mcansh/vite-plugin-svg-sprite@e546440",
-    "@react-router/dev": "7.5.3",
-    "@tailwindcss/vite": "4.1.5",
+    "@react-router/dev": "7.6.0",
+    "@tailwindcss/vite": "4.1.6",
     "@total-typescript/tsconfig": "^1.0.4",
     "@types/etag": "^1.8.3",
-    "@types/react": "19.1.2",
-    "@types/react-dom": "19.1.3",
-    "@typescript-eslint/eslint-plugin": "^8.32.0",
-    "@typescript-eslint/parser": "^8.32.0",
-    "@typescript/lib-dom": "npm:@types/web@^0.0.209",
+    "@types/react": "19.1.4",
+    "@types/react-dom": "19.1.4",
+    "@typescript-eslint/eslint-plugin": "^8.32.1",
+    "@typescript-eslint/parser": "^8.32.1",
+    "@typescript/lib-dom": "npm:@types/web@^0.0.233",
     "autoprefixer": "^10.4.21",
     "babel-plugin-react-compiler": "19.1.0-rc.1",
     "eslint": "^9.26.0",
@@ -70,33 +70,24 @@
     "eslint-plugin-prefer-let": "^4.0.0",
     "eslint-plugin-react-hooks": "6.0.0-rc.1",
     "husky": "^9.1.7",
-    "knip": "^5.53.0",
-    "lightningcss": "^1.29.3",
-    "lint-staged": "^15.5.1",
+    "knip": "^5.55.1",
+    "lightningcss": "^1.30.0",
+    "lint-staged": "^16.0.0",
     "micromatch": "^4.0.8",
     "prettier": "^3.5.3",
     "prettier-plugin-organize-imports": "^4.1.0",
     "prettier-plugin-tailwindcss": "^0.6.11",
     "react-compiler-runtime": "19.1.0-rc.1",
-    "shippie": "^0.10.0",
-    "tailwindcss": "4.1.5",
+    "shippie": "^0.14.0",
+    "tailwindcss": "4.1.6",
     "typescript": "^5.8.3",
-    "typescript-eslint": "^8.32.0",
+    "typescript-eslint": "^8.32.1",
     "vite": "^6.3.5",
     "vite-plugin-babel": "^1.3.1",
-    "zx": "^8.5.3"
+    "zx": "^8.5.4"
   },
   "engines": {
     "node": ">=22"
   },
-  "packageManager": "pnpm@10.10.0+sha512.d615db246fe70f25dcfea6d8d73dee782ce23e2245e3c4f6f888249fb568149318637dca73c2c5c8ef2a4ca0d5657fb9567188bfab47f566d1ee6ce987815c39",
-  "pnpm": {
-    "overrides": {
-      "axios@>=0.8.1 <0.28.0": ">=0.28.0",
-      "rollup@<2.79.2": ">=2.79.2",
-      "cookie@<0.7.0": ">=0.7.0",
-      "esbuild@<=0.24.2": ">=0.25.0",
-      "axios@<0.30.0": ">=0.30.0"
-    }
-  }
+  "packageManager": "pnpm@10.10.0+sha512.d615db246fe70f25dcfea6d8d73dee782ce23e2245e3c4f6f888249fb568149318637dca73c2c5c8ef2a4ca0d5657fb9567188bfab47f566d1ee6ce987815c39"
 }
