--- a/package.json
+++ b/package.json
@@ -79,6 +79,7 @@
     "prettier-plugin-tailwindcss": "^0.6.11",
     "react-compiler-runtime": "19.1.0-rc.1",
     "shippie": "^0.14.0",
+    "sonda": "^0.7.1",
     "tailwindcss": "4.1.6",
     "typescript": "^5.8.3",
     "typescript-eslint": "^8.32.1",
@@ -89,5 +90,5 @@
   "engines": {
     "node": ">=22"
   },
-  "packageManager": "pnpm@10.10.0+sha512.d615db246fe70f25dcfea6d8d73dee782ce23e2245e3c4f6f888249fb568149318637dca73c2c5c8ef2a4ca0d5657fb9567188bfab47f566d1ee6ce987815c39"
+  "packageManager": "pnpm@10.11.0+sha512.6540583f41cc5f628eb3d9773ecee802f4f9ef9923cc45b69890fb47991d4b092964694ec3a4f738a420c918a333062c8b925d312f42e4f0c263eb603551f977"
 }
