--- a/package.json
+++ b/package.json
@@ -51,7 +51,7 @@
     "@cld-apis/types": "^0.1.6",
     "@eslint/compat": "^1.2.9",
     "@eslint/js": "^9.26.0",
-    "@mcansh/vite-plugin-svg-sprite": "https://pkg.pr.new/mcansh/vite-plugin-svg-sprite/@mcansh/vite-plugin-svg-sprite@e546440",
+    "@mcansh/vite-plugin-svg-sprite": "^0.6.0",
     "@react-router/dev": "7.6.0",
     "@tailwindcss/vite": "4.1.6",
     "@total-typescript/tsconfig": "^1.0.4",
