--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "@typescript-eslint/eslint-plugin": "^8.33.0",
     "@typescript-eslint/parser": "^8.33.0",
     "@typescript/lib-dom": "npm:@types/web@^0.0.236",
+    "@typescript/native-preview": "7.0.0-dev.20250530.1",
     "autoprefixer": "^10.4.21",
     "babel-plugin-react-compiler": "19.1.0-rc.2",
     "eslint": "^9.27.0",
