--- a/package.json
+++ b/package.json
@@ -84,7 +84,7 @@
     "tailwindcss": "4.1.8",
     "typescript": "^5.8.3",
     "typescript-eslint": "^8.33.0",
-    "vite": "^6.3.5",
+    "vite": "npm:rolldown-vite@6.3.14",
     "vite-plugin-babel": "^1.3.1",
     "zx": "^8.5.4"
   },
