--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "@react-router/dev": "7.6.1",
     "@tailwindcss/vite": "4.1.8",
     "@total-typescript/tsconfig": "^1.0.4",
+    "@types/node": "^24.0.1",
     "@types/react": "19.1.6",
     "@types/react-dom": "19.1.5",
     "@typescript-eslint/eslint-plugin": "^8.33.0",
