--- a/package.json
+++ b/package.json
@@ -43,8 +43,6 @@
   "devDependencies": {
     "@cld-apis/types": "^0.1.6",
     "@cloudflare/vite-plugin": "^1.0.12",
-    "@eslint/compat": "^1.2.9",
-    "@eslint/js": "^9.28.0",
     "@mcansh/vite-plugin-svg-sprite": "^0.6.0",
     "@react-router/dev": "7.6.1",
     "@tailwindcss/vite": "4.1.8",
@@ -52,22 +50,15 @@
     "@types/node": "^24.0.1",
     "@types/react": "19.1.6",
     "@types/react-dom": "19.1.5",
-    "@typescript-eslint/eslint-plugin": "^8.33.0",
-    "@typescript-eslint/parser": "^8.33.0",
     "@typescript/lib-dom": "npm:@types/web@^0.0.237",
     "@typescript/native-preview": "7.0.0-dev.20250601.1",
     "babel-plugin-react-compiler": "19.1.0-rc.2",
-    "eslint": "^9.28.0",
-    "eslint-config-flat-gitignore": "^2.1.0",
-    "eslint-import-resolver-typescript": "^4.4.2",
-    "eslint-plugin-import": "^2.31.0",
-    "eslint-plugin-prefer-let": "^4.0.0",
-    "eslint-plugin-react-hooks": "6.0.0-rc.1",
     "husky": "^9.1.7",
     "knip": "^5.59.1",
     "lightningcss": "^1.30.1",
     "lint-staged": "^16.1.0",
     "micromatch": "^4.0.8",
+    "oxlint": "^1.1.0",
     "prettier": "^3.5.3",
     "prettier-plugin-organize-imports": "^4.1.0",
     "prettier-plugin-tailwindcss": "^0.6.12",
