--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -7,4 +7,8 @@
 		"VALUE_FROM_CLOUDFLARE": "Hello from Cloudflare",
 	},
 	"compatibility_flags": ["nodejs_compat"],
+	"upload_source_maps": true,
+	"observability": {
+		"enabled": true,
+	},
 }
