--- a/package.json
+++ b/package.json
@@ -34,55 +34,55 @@
     "pretty-cache-header": "^1.0.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
-    "react-router": "7.6.1",
-    "react-scan": "^0.3.4",
+    "react-router": "7.6.3",
+    "react-scan": "^0.4.3",
     "remix-utils": "^8.7.0",
-    "tailwind-merge": "^3.3.0",
-    "zod": "^3.25.46"
+    "tailwind-merge": "^3.3.1",
+    "zod": "^3.25.67"
   },
   "devDependencies": {
     "@cld-apis/types": "^0.1.6",
-    "@cloudflare/vite-plugin": "^1.0.12",
-    "@eslint/compat": "^1.2.9",
-    "@eslint/js": "^9.28.0",
-    "@mcansh/vite-plugin-svg-sprite": "^0.6.0",
-    "@react-router/dev": "7.6.1",
-    "@tailwindcss/vite": "4.1.8",
+    "@cloudflare/vite-plugin": "^1.7.5",
+    "@eslint/compat": "^1.3.1",
+    "@eslint/js": "^9.30.0",
+    "@mcansh/vite-plugin-svg-sprite": "^0.7.0",
+    "@react-router/dev": "7.6.3",
+    "@tailwindcss/vite": "4.1.11",
     "@total-typescript/tsconfig": "^1.0.4",
-    "@types/node": "^24.0.1",
-    "@types/react": "19.1.6",
-    "@types/react-dom": "19.1.5",
-    "@typescript-eslint/eslint-plugin": "^8.33.0",
-    "@typescript-eslint/parser": "^8.33.0",
-    "@typescript/lib-dom": "npm:@types/web@^0.0.237",
-    "@typescript/native-preview": "7.0.0-dev.20250601.1",
+    "@types/node": "^24.0.8",
+    "@types/react": "19.1.8",
+    "@types/react-dom": "19.1.6",
+    "@typescript-eslint/eslint-plugin": "^8.35.1",
+    "@typescript-eslint/parser": "^8.35.1",
+    "@typescript/lib-dom": "npm:@types/web@^0.0.245",
+    "@typescript/native-preview": "7.0.0-dev.20250630.1",
     "babel-plugin-react-compiler": "19.1.0-rc.2",
-    "eslint": "^9.28.0",
+    "eslint": "^9.30.0",
     "eslint-config-flat-gitignore": "^2.1.0",
-    "eslint-import-resolver-typescript": "^4.4.2",
-    "eslint-plugin-import": "^2.31.0",
+    "eslint-import-resolver-typescript": "^4.4.4",
+    "eslint-plugin-import": "^2.32.0",
     "eslint-plugin-prefer-let": "^4.0.0",
     "eslint-plugin-react-hooks": "6.0.0-rc.1",
     "husky": "^9.1.7",
-    "knip": "^5.59.1",
+    "knip": "^5.61.3",
     "lightningcss": "^1.30.1",
-    "lint-staged": "^16.1.0",
+    "lint-staged": "^16.1.2",
     "micromatch": "^4.0.8",
-    "prettier": "^3.5.3",
+    "prettier": "^3.6.2",
     "prettier-plugin-organize-imports": "^4.1.0",
-    "prettier-plugin-tailwindcss": "^0.6.12",
+    "prettier-plugin-tailwindcss": "^0.6.13",
     "react-compiler-runtime": "19.1.0-rc.2",
-    "sonda": "^0.7.1",
-    "tailwindcss": "4.1.8",
+    "sonda": "^0.8.2",
+    "tailwindcss": "4.1.11",
     "typescript": "^5.8.3",
-    "typescript-eslint": "^8.33.0",
-    "vite": "npm:rolldown-vite@6.3.15",
-    "vite-plugin-babel": "^1.3.1",
-    "wrangler": "^4.20.0",
-    "zx": "^8.5.4"
+    "typescript-eslint": "^8.35.1",
+    "vite": "npm:rolldown-vite@7.0.3",
+    "vite-plugin-babel": "^1.3.2",
+    "wrangler": "^4.22.0",
+    "zx": "^8.6.0"
   },
   "engines": {
     "node": ">=22"
   },
-  "packageManager": "pnpm@10.11.0+sha512.6540583f41cc5f628eb3d9773ecee802f4f9ef9923cc45b69890fb47991d4b092964694ec3a4f738a420c918a333062c8b925d312f42e4f0c263eb603551f977"
+  "packageManager": "pnpm@10.12.4"
 }
