--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -1,17 +1,19 @@
 onlyBuiltDependencies:
-  - "@tailwindcss/oxide"
+  - '@tailwindcss/oxide'
   - esbuild
   - husky
+  - oxc-resolver
   - sharp
   - unrs-resolver
   - workerd
+
 overrides:
-  axios@>=0.8.1 <0.28.0: ">=0.28.0"
-  rollup@<2.79.2: ">=2.79.2"
-  cookie@<0.7.0: ">=0.7.0"
-  esbuild@<=0.24.2: ">=0.25.0"
-  axios@<0.30.0: ">=0.30.0"
-  "@octokit/request-error@>=1.0.0 <5.1.1": ">=5.1.1"
-  "@octokit/request@>=1.0.0 <8.4.1": ">=8.4.1"
-  "@octokit/plugin-paginate-rest@>=1.0.0 <9.2.2": ">=9.2.2"
-  "@octokit/plugin-paginate-rest@>=9.3.0-beta.1 <11.4.1": ">=11.4.1"
+  axios@>=0.8.1 <0.28.0: '>=0.28.0'
+  rollup@<2.79.2: '>=2.79.2'
+  cookie@<0.7.0: '>=0.7.0'
+  esbuild@<=0.24.2: '>=0.25.0'
+  axios@<0.30.0: '>=0.30.0'
+  '@octokit/request-error@>=1.0.0 <5.1.1': '>=5.1.1'
+  '@octokit/request@>=1.0.0 <8.4.1': '>=8.4.1'
+  '@octokit/plugin-paginate-rest@>=1.0.0 <9.2.2': '>=9.2.2'
+  '@octokit/plugin-paginate-rest@>=9.3.0-beta.1 <11.4.1': '>=11.4.1'
