--- a/package.json
+++ b/package.json
@@ -26,62 +26,62 @@
     "knip": "knip-bun"
   },
   "dependencies": {
-    "@mcansh/http-helmet": "^0.13.1",
+    "@mcansh/http-helmet": "^0.13.2",
     "cloudinary-build-url": "^0.2.4",
     "clsx": "^2.1.1",
     "fathom-client": "^3.7.2",
-    "isbot": "^5.1.28",
+    "isbot": "^5.1.31",
     "pretty-cache-header": "^1.0.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-router": "7.6.3",
     "react-scan": "^0.4.3",
-    "remix-utils": "^8.7.0",
+    "remix-utils": "^8.8.0",
     "tailwind-merge": "^3.3.1",
-    "zod": "^3.25.67"
+    "zod": "^3.25.76"
   },
   "devDependencies": {
     "@cld-apis/types": "^0.1.6",
-    "@cloudflare/vite-plugin": "^1.9.6",
-    "@eslint/compat": "^1.3.1",
-    "@eslint/js": "^9.30.0",
-    "@mcansh/vite-plugin-svg-sprite": "^0.7.0",
+    "@cloudflare/vite-plugin": "^1.13.8",
+    "@eslint/compat": "^1.4.0",
+    "@eslint/js": "^9.36.0",
+    "@mcansh/vite-plugin-svg-sprite": "^0.7.1",
     "@react-router/dev": "7.6.3",
     "@tailwindcss/vite": "4.1.11",
     "@total-typescript/tsconfig": "^1.0.4",
-    "@types/node": "^24.0.8",
+    "@types/node": "^24.6.1",
     "@types/react": "19.1.8",
     "@types/react-dom": "19.1.6",
-    "@typescript-eslint/eslint-plugin": "^8.35.1",
-    "@typescript-eslint/parser": "^8.35.1",
-    "@typescript/lib-dom": "npm:@types/web@^0.0.250",
-    "@typescript/native-preview": "7.0.0-dev.20250718.1",
-    "babel-plugin-react-compiler": "19.1.0-rc.2",
-    "eslint": "^9.30.0",
+    "@typescript-eslint/eslint-plugin": "^8.45.0",
+    "@typescript-eslint/parser": "^8.45.0",
+    "@typescript/lib-dom": "npm:@types/web@^0.0.271",
+    "@typescript/native-preview": "7.0.0-dev.20251001.1",
+    "babel-plugin-react-compiler": "19.1.0-rc.3",
+    "eslint": "^9.36.0",
     "eslint-config-flat-gitignore": "^2.1.0",
     "eslint-import-resolver-typescript": "^4.4.4",
     "eslint-plugin-import": "^2.32.0",
     "eslint-plugin-prefer-let": "^4.0.0",
-    "eslint-plugin-react-hooks": "6.0.0-rc.1",
+    "eslint-plugin-react-hooks": "6.0.0-rc.2",
     "husky": "^9.1.7",
-    "knip": "^5.62.0",
-    "lightningcss": "^1.30.1",
-    "lint-staged": "^16.1.2",
+    "knip": "^5.64.1",
+    "lightningcss": "^1.30.2",
+    "lint-staged": "^16.2.3",
     "micromatch": "^4.0.8",
     "prettier": "^3.6.2",
-    "prettier-plugin-organize-imports": "^4.1.0",
-    "prettier-plugin-tailwindcss": "^0.6.13",
+    "prettier-plugin-organize-imports": "^4.3.0",
+    "prettier-plugin-tailwindcss": "^0.6.14",
     "sonda": "^0.8.2",
     "tailwindcss": "4.1.11",
-    "typescript": "^5.8.3",
-    "typescript-eslint": "^8.35.1",
-    "vite": "npm:rolldown-vite@7.0.9",
+    "typescript": "^5.9.3",
+    "typescript-eslint": "^8.45.0",
+    "vite": "npm:rolldown-vite@7.1.14",
     "vite-plugin-babel": "^1.3.2",
-    "wrangler": "^4.25.0",
-    "zx": "^8.6.0"
+    "wrangler": "^4.40.3",
+    "zx": "^8.8.4"
   },
   "engines": {
     "node": ">=22"
   },
-  "packageManager": "pnpm@10.12.4"
+  "packageManager": "pnpm@10.17.1+sha512.17c560fca4867ae9473a3899ad84a88334914f379be46d455cbf92e5cf4b39d34985d452d2583baf19967fa76cb5c17bc9e245529d0b98745721aa7200ecaf7a"
 }
