--- a/package.json
+++ b/package.json
@@ -32,13 +32,13 @@
     "fathom-client": "^3.7.2",
     "isbot": "^5.1.31",
     "pretty-cache-header": "^1.0.0",
-    "react": "19.1.0",
-    "react-dom": "19.1.0",
-    "react-router": "7.6.3",
+    "react": "19.2.0",
+    "react-dom": "19.2.0",
+    "react-router": "7.9.3",
     "react-scan": "^0.4.3",
-    "remix-utils": "^8.8.0",
+    "remix-utils": "^9.0.0",
     "tailwind-merge": "^3.3.1",
-    "zod": "^3.25.76"
+    "zod": "^4.1.11"
   },
   "devDependencies": {
     "@cld-apis/types": "^0.1.6",
@@ -46,23 +46,23 @@
     "@eslint/compat": "^1.4.0",
     "@eslint/js": "^9.36.0",
     "@mcansh/vite-plugin-svg-sprite": "^0.7.1",
-    "@react-router/dev": "7.6.3",
-    "@tailwindcss/vite": "4.1.11",
+    "@react-router/dev": "7.9.3",
+    "@tailwindcss/vite": "4.1.14",
     "@total-typescript/tsconfig": "^1.0.4",
-    "@types/node": "^24.6.1",
-    "@types/react": "19.1.8",
-    "@types/react-dom": "19.1.6",
+    "@types/node": "^24.6.2",
+    "@types/react": "19.2.0",
+    "@types/react-dom": "19.2.0",
     "@typescript-eslint/eslint-plugin": "^8.45.0",
     "@typescript-eslint/parser": "^8.45.0",
-    "@typescript/lib-dom": "npm:@types/web@^0.0.271",
-    "@typescript/native-preview": "7.0.0-dev.20251001.1",
+    "@typescript/lib-dom": "npm:@types/web@^0.0.272",
+    "@typescript/native-preview": "7.0.0-dev.20251002.1",
     "babel-plugin-react-compiler": "19.1.0-rc.3",
     "eslint": "^9.36.0",
     "eslint-config-flat-gitignore": "^2.1.0",
     "eslint-import-resolver-typescript": "^4.4.4",
     "eslint-plugin-import": "^2.32.0",
     "eslint-plugin-prefer-let": "^4.0.0",
-    "eslint-plugin-react-hooks": "6.0.0-rc.2",
+    "eslint-plugin-react-hooks": "6.1.0",
     "husky": "^9.1.7",
     "knip": "^5.64.1",
     "lightningcss": "^1.30.2",
@@ -71,11 +71,11 @@
     "prettier": "^3.6.2",
     "prettier-plugin-organize-imports": "^4.3.0",
     "prettier-plugin-tailwindcss": "^0.6.14",
-    "sonda": "^0.8.2",
-    "tailwindcss": "4.1.11",
+    "sonda": "^0.9.0",
+    "tailwindcss": "4.1.14",
     "typescript": "^5.9.3",
     "typescript-eslint": "^8.45.0",
-    "vite": "npm:rolldown-vite@7.1.14",
+    "vite": "npm:rolldown-vite@7.1.15",
     "vite-plugin-babel": "^1.3.2",
     "wrangler": "^4.40.3",
     "zx": "^8.8.4"
