--- a/package.json
+++ b/package.json
@@ -45,7 +45,7 @@
     "@cloudflare/vite-plugin": "^1.13.8",
     "@eslint/compat": "^1.4.0",
     "@eslint/js": "^9.36.0",
-    "@mcansh/vite-plugin-svg-sprite": "^0.7.1",
+    "@mcansh/vite-plugin-svg-sprite": "https://pkg.pr.new/mcansh/vite-plugin-svg-sprite/@mcansh/vite-plugin-svg-sprite@58",
     "@react-router/dev": "7.9.3",
     "@tailwindcss/vite": "4.1.14",
     "@total-typescript/tsconfig": "^1.0.4",
@@ -75,7 +75,7 @@
     "tailwindcss": "4.1.14",
     "typescript": "^5.9.3",
     "typescript-eslint": "^8.45.0",
-    "vite": "npm:rolldown-vite@7.1.15",
+    "vite": "8.0.0-beta.0",
     "vite-plugin-babel": "^1.3.2",
     "wrangler": "^4.40.3",
     "zx": "^8.8.5"
