--- a/package.json
+++ b/package.json
@@ -57,12 +57,13 @@
     "@typescript/lib-dom": "npm:@types/web@^0.0.272",
     "@typescript/native-preview": "7.0.0-dev.20251002.1",
     "babel-plugin-react-compiler": "19.1.0-rc.3",
+    "baseline-browser-mapping": "^2.9.5",
     "eslint": "^9.36.0",
     "eslint-config-flat-gitignore": "^2.1.0",
     "eslint-import-resolver-typescript": "^4.4.4",
     "eslint-plugin-import": "^2.32.0",
     "eslint-plugin-prefer-let": "^4.0.0",
-    "eslint-plugin-react-hooks": "6.1.0",
+    "eslint-plugin-react-hooks": "7.0.1",
     "husky": "^9.1.7",
     "knip": "^5.64.1",
     "lightningcss": "^1.30.2",
@@ -83,5 +84,5 @@
   "engines": {
     "node": ">=22"
   },
-  "packageManager": "pnpm@10.17.1+sha512.17c560fca4867ae9473a3899ad84a88334914f379be46d455cbf92e5cf4b39d34985d452d2583baf19967fa76cb5c17bc9e245529d0b98745721aa7200ecaf7a"
+  "packageManager": "pnpm@10.25.0+sha512.5e82639027af37cf832061bcc6d639c219634488e0f2baebe785028a793de7b525ffcd3f7ff574f5e9860654e098fe852ba8ac5dd5cefe1767d23a020a92f501"
 }
