--- a/package.json
+++ b/package.json
@@ -56,7 +56,7 @@
     "@typescript-eslint/parser": "^8.45.0",
     "@typescript/lib-dom": "npm:@types/web@^0.0.272",
     "@typescript/native-preview": "7.0.0-dev.20251002.1",
-    "babel-plugin-react-compiler": "19.1.0-rc.3",
+    "babel-plugin-react-compiler": "1.0.0",
     "baseline-browser-mapping": "^2.9.5",
     "eslint": "^9.36.0",
     "eslint-config-flat-gitignore": "^2.1.0",
