--- a/package.json
+++ b/package.json
@@ -32,8 +32,8 @@
     "fathom-client": "^3.7.2",
     "isbot": "^5.1.31",
     "pretty-cache-header": "^1.0.0",
-    "react": "19.2.0",
-    "react-dom": "19.2.0",
+    "react": "19.2.1",
+    "react-dom": "19.2.1",
     "react-router": "7.10.1",
     "react-scan": "^0.4.3",
     "remix-utils": "^9.0.0",
@@ -50,13 +50,13 @@
     "@tailwindcss/vite": "4.1.14",
     "@total-typescript/tsconfig": "^1.0.4",
     "@types/node": "^24.6.2",
-    "@types/react": "19.2.0",
-    "@types/react-dom": "19.2.0",
+    "@types/react": "19.2.7",
+    "@types/react-dom": "19.2.3",
     "@typescript-eslint/eslint-plugin": "^8.45.0",
     "@typescript-eslint/parser": "^8.45.0",
     "@typescript/lib-dom": "npm:@types/web@^0.0.272",
     "@typescript/native-preview": "7.0.0-dev.20251002.1",
-    "babel-plugin-react-compiler": "19.1.0-rc.3",
+    "babel-plugin-react-compiler": "1.0.0",
     "baseline-browser-mapping": "^2.9.5",
     "eslint": "^9.36.0",
     "eslint-config-flat-gitignore": "^2.1.0",
